# -Legislative-Intelligence-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
artifacts/: HYPOTHETICAL_ARTIFACTS_FORMALIZATION_SUMMARY.json  HYPOTHETICAL_ARTIFACTS_INDEX.json
audit/: audit-log.jsonl
control_plane/: __init__.py  audit_enforcer.py  escalation.py  gate_enforcer.py  phase_state.py
dashboard/: package.json
dashboards/: AGENT_COCKPIT_README.md  AGENT_OPPORTUNITY_DASHBOARD_DESIGN.md  ARTIFACT_VIEWER_ENHANCEMENT.md  BIDIRECTIONAL_DASHBOARD_README.md  COCKPIT_REVIEW_SCREENSHOT_NOTES.md  COCKPIT_TEMPLATE_README.md  DASHBOARD_ARCHITECTURE.md  DASHBOARD_AUDIT_CHECKLIST.md  DASHBOARD_DECISION_RUBRIC.md  DASHBOARD_LANGUAGE_MAP.md  DASHBOARD_STANDARDIZATION_GUIDE.md  DESIGN_SYSTEM_SPEC.md  DIAGRAM_VIEWER_README.md  HOSTING_OPTIONS.mmd  HTML_ONLY_COCKPIT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MASTER_DASHBOARD_PROMPT.md  QUICK_START.md  README_STANDARDIZATION.md  README_batch_review.md  REVIEW_INTERFACE_README.md  REVIEW_VIEWERS_README.md  START_AGENT_COCKPIT.bat  VERIFICATION_REPORT.md  VIEWABLE_FILES_INDEX.md  VIEWER_SETUP_COMPLETE.md  Y_CHARGE_DASHBOARD_README.md  agent_opportunity_dashboard.html  agent_runner_cockpit.html  artifact_review_dashboard.html  check_agent_counts.py  cockpit_batch_review.html  cockpit_pending.txt  cockpit_review.html  cockpit_state.out.json  cockpit_template.html  dashboard_index.html  dev_status_dashboard.html  diagram_viewer.html  (+31 more)
data/: workflow_state.json
(+448 files in other folders)
